レイアウト修正

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,40 +4,35 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/popular_button"
-        android:text="@string/popular_button_label"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/everyone_button"
-        android:text="@string/everyone_button_label"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/popular_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/debuts_button"
-        android:text="@string/debuts_button_label"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/everyone_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/favorite_list_button"
-        android:text="@string/favorite_list_button_label"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/debuts_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+    <LinearLayout
+        android:id="@+id/buttons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+        <Button
+            android:id="@+id/popular_button"
+            android:text="@string/popular_button_label"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1" />
+        <Button
+            android:id="@+id/everyone_button"
+            android:text="@string/everyone_button_label"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1" />
+        <Button
+            android:id="@+id/debuts_button"
+            android:text="@string/debuts_button_label"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1" />
+        </LinearLayout>
     <ListView
         android:id="@+id/android:list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@id/popular_button"
+        android:layout_above="@id/buttons"
         />
 
 
