--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,22 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:paddingRight="8dp"
+    android:paddingLeft="8dp">
     <ImageView
         android:id="@+id/detail_dribbble_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/detail_title_text"
+        android:id="@+id/detail_title_label"
+        android:text="@string/title_label"
+        android:textSize="24sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/detail_dribbble_image" />
     <TextView
-        android:id="@+id/detail_player_text"
+        android:id="@+id/detail_title_text"
+        android:textStyle="bold"
+        android:textSize="24sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/detail_title_label"
+        android:layout_below="@+id/detail_dribbble_image" />
+    <TextView
+        android:id="@+id/detail_player_label"
+        android:text="@string/player_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
         android:layout_alignParentLeft="true"
+        android:layout_below="@+id/detail_title_text" />
+    <TextView
+        android:id="@+id/detail_player_text"
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:layout_toRightOf="@id/detail_player_label"
         android:layout_below="@+id/detail_title_text" />
 
 </RelativeLayout>
