--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -12,21 +12,28 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="16dp"
+        android:paddingLeft="8dp"
         android:orientation="vertical"
         android:layout_toRightOf="@id/dribbble_image">
 
         <TextView
-            android:id="@+id/player_text"
             android:text="GOKA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"/>
-        <TextView
             android:id="@+id/title_text"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:textColor="#000000"
+            android:layout_weight="3"
+            android:textSize="24sp"
+            android:gravity="center_vertical" />
+        <TextView
             android:text="KOTA"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"/>
+            android:id="@+id/player_text"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textSize="16sp"
+            android:gravity="center_vertical" />
 
 
     </LinearLayout>
