--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,14 @@
             android:id="@+id/popular_button"
             android:background="#ffb6c1"
             android:text="@string/popular_button_label"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/row_text"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1" />
         <Button
             android:id="@+id/everyone_button"
             android:background="#ffb6c1"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/row_text"
             android:text="@string/everyone_button_label"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
@@ -30,7 +30,7 @@
         <Button
             android:id="@+id/debuts_button"
             android:background="#ffb6c1"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/row_text"
             android:text="@string/debuts_button_label"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
