--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -18,17 +18,17 @@
         android:layout_toRightOf="@id/dribbble_image">
 
         <TextView
-            android:text="GOKA"
             android:id="@+id/title_text"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
+            android:paddingLeft="8dp"
             android:textColor="#000000"
             android:layout_weight="3"
             android:textSize="24sp"
             android:gravity="center_vertical" />
         <TextView
-            android:text="KOTA"
             android:id="@+id/player_text"
+            android:paddingLeft="8dp"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
