--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -9,33 +9,21 @@
         android:id="@+id/detail_title_text"
         android:textStyle="bold"
         android:textSize="32sp"
+        android:layout_margin="12dp"
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
-    <LinearLayout
-        android:id="@+id/player_layout"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/detail_player_text"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/detail_title_text">
-        <TextView
-            android:id="@+id/detail_player_label"
-            android:text="@string/player_label"
-            android:layout_gravity="center_vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp" />
-        <TextView
-            android:id="@+id/detail_player_text"
-            android:layout_gravity="center_vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp" />
-    </LinearLayout>
+        android:layout_below="@+id/detail_title_text"
+        android:textSize="16sp" />
     <ImageView
         android:id="@+id/detail_dribbble_image"
-        android:layout_below="@+id/player_layout"
-        android:layout_width="wrap_content"
+        android:layout_below="@+id/detail_player_text"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </RelativeLayout>
