--- a/app/src/main/res/color/row_text.xml
+++ b/app/src/main/res/color/row_text.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+    <!--種類ボタンの色の設定-->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true" android:state_pressed="false" android:color="#FFFFFF" />
     <item android:state_focused="true" android:state_pressed="true" android:color="#a9a9a9" />
