--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,25 +5,29 @@
     android:layout_height="fill_parent"
     android:paddingRight="8dp"
     android:paddingLeft="8dp">
+
     <TextView
         android:id="@+id/detail_title_text"
         android:textStyle="bold"
         android:textSize="32sp"
         android:layout_margin="12dp"
-        android:gravity="center_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal" />
     <TextView
         android:id="@+id/detail_player_text"
-        android:gravity="center_horizontal"
+        android:textSize="16sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/detail_title_text"
-        android:textSize="16sp" />
+        android:gravity="center_horizontal" />
+
     <ImageView
         android:id="@+id/detail_dribbble_image"
         android:layout_below="@+id/detail_player_text"
-        android:gravity="center_horizontal"
+        android:layout_marginTop="12dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal" />
+
 </RelativeLayout>
