--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -4,37 +4,38 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <ImageView
         android:id="@+id/dribbble_image"
         android:paddingLeft="8dp"
         android:layout_width="100dp"
         android:layout_height="100dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="16dp"
         android:paddingLeft="8dp"
-        android:orientation="vertical"
-        android:layout_toRightOf="@id/dribbble_image">
+        android:layout_toRightOf="@id/dribbble_image"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/title_text"
+            android:textSize="24sp"
+            android:textColor="#000000"
+            android:paddingLeft="8dp"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:paddingLeft="8dp"
-            android:textColor="#000000"
             android:layout_weight="3"
-            android:textSize="24sp"
             android:gravity="center_vertical" />
         <TextView
             android:id="@+id/player_text"
+            android:textSize="16sp"
             android:paddingLeft="8dp"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:textSize="16sp"
             android:gravity="center_vertical" />
-
 
     </LinearLayout>
 </RelativeLayout>
