--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,41 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#000000"
+    android:padding="1dp"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#FFFFFF">
 
     <ImageView
         android:id="@+id/dribbble_image"
-        android:paddingLeft="8dp"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="4dp"
+        android:minHeight="150dp"
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="150dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="16dp"
+        android:paddingTop="4dp"
         android:paddingLeft="8dp"
-        android:layout_toRightOf="@id/dribbble_image"
+        android:layout_below="@id/dribbble_image"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/title_text"
-            android:textSize="24sp"
+            android:textSize="12sp"
             android:textColor="#000000"
-            android:paddingLeft="8dp"
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3"
-            android:gravity="center_vertical" />
+            android:layout_height="fill_parent" />
         <TextView
             android:id="@+id/player_text"
-            android:textSize="16sp"
-            android:paddingLeft="8dp"
+            android:textSize="8sp"
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical" />
+            android:layout_height="fill_parent" />
 
     </LinearLayout>
 </RelativeLayout>
+
+</LinearLayout>
