--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -13,32 +13,49 @@
 
     <ImageView
         android:id="@+id/dribbble_image"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="4dp"
-        android:minHeight="150dp"
+        android:layout_margin="4dp"
+        android:minHeight="160dp"
         android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="150dp" />
+        android:layout_height="160dp" />
+
+    <ImageView
+        android:id="@+id/player_image"
+        android:paddingLeft="4dp"
+        android:paddingBottom="4dp"
+        android:minHeight="40dp"
+        android:scaleType="centerCrop"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/dribbble_image"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="4dp"
-        android:paddingLeft="8dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
         android:layout_below="@id/dribbble_image"
+        android:layout_toRightOf="@id/player_image"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/title_text"
-            android:textSize="12sp"
+            android:textSize="16sp"
+            android:singleLine="true"
+            android:maxLines="1"
+            android:scrollHorizontally="true"
+            android:ellipsize="end"
             android:textColor="#000000"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent" />
         <TextView
             android:id="@+id/player_text"
-            android:textSize="8sp"
-            android:layout_width="fill_parent"
+            android:textSize="16sp"
+            android:singleLine="true"
+            android:maxLines="1"
+            android:scrollHorizontally="true"
+            android:ellipsize="end"
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent" />
 
     </LinearLayout>
