--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#000000"
+    android:background="#eeeeee"
     android:padding="1dp"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -50,7 +50,8 @@
             android:layout_height="fill_parent" />
         <TextView
             android:id="@+id/player_text"
-            android:textSize="16sp"
+            android:textSize="12sp"
+            android:layout_marginBottom="2dp"
             android:singleLine="true"
             android:maxLines="1"
             android:scrollHorizontally="true"
